[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "stag-hunt"
version = "0.1.0"
description = "This repository contains a Python implementation of the Stag Hunt evolutionary game in complex networks."
authors = ["Simone Gigante <simonegigante17@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
networkx = "^3.3"
matplotlib = "^3.9.0"
